--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Chao Meng",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2"
   }
 }
